fix: 🐛  Removes scroll nouncing on mobile

--- a/app/static/reset.css
+++ b/app/static/reset.css
@@ -1,4 +1,5 @@
-body, html {
+
+html {
 	max-width: 100vw;
 	overflow-x: hidden;
 }
